--- a/builder2.html
+++ b/builder2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minecraft-like Game with Joystick, Jump, Block Placement, Enhanced Terrain, Camera Drag, and Movement</title>
+  <title>Minecraft-like Game with Joystick, Block Placement, Enhanced Terrain, and Camera Drag</title>
   <style>
     body { margin: 0; overflow: hidden; touch-action: none; }
     canvas { display: block; }
@@ -183,65 +183,54 @@
       }
     });
 
-    // Walking on the ground: gravity and collision detection
-    const gravity = -0.2;
-    let velocity = new THREE.Vector3(0, 0, 0);
-    const groundLevel = 0;
-    let isJumping = false;
+    // Camera Drag (Rotating the camera like Roblox)
+    let isDragging = false;
+    let previousTouch = { x: 0, y: 0 };
 
-    // Jumping
-    const jumpHeight = 2;
-    const jumpSpeed = 0.3;
+    // Handle touch start event
+    renderer.domElement.addEventListener('touchstart', (e) => {
+      isDragging = true;
+      previousTouch.x = e.touches[0].clientX;
+      previousTouch.y = e.touches[0].clientY;
+    });
 
-    function handleJump() {
-      if (!isJumping && camera.position.y === groundLevel) {
-        isJumping = true;
-        velocity.y = jumpSpeed;
+    // Handle touch move event
+    renderer.domElement.addEventListener('touchmove', (e) => {
+      if (isDragging) {
+        const deltaX = e.touches[0].clientX - previousTouch.x;
+        const deltaY = e.touches[0].clientY - previousTouch.y;
+
+        camera.rotation.y -= deltaX * 0.005;  // Rotate around Y-axis (horizontal movement)
+        camera.rotation.x -= deltaY * 0.005;  // Rotate around X-axis (vertical movement)
+        
+        previousTouch.x = e.touches[0].clientX;
+        previousTouch.y = e.touches[0].clientY;
       }
-    }
+    });
 
-    document.getElementById('jumpButton').addEventListener('click', handleJump);
-
-    function updateMovement() {
-      velocity.y += gravity; // Apply gravity
-
-      // Check for collision with terrain
-      blocks.forEach(block => {
-        if (camera.position.x > block.position.x - blockSize / 2 && camera.position.x < block.position.x + blockSize / 2 &&
-            camera.position.z > block.position.z - blockSize / 2 && camera.position.z < block.position.z + blockSize / 2 &&
-            camera.position.y <= block.position.y + blockSize / 2) {
-          velocity.y = 0;
-          camera.position.y = block.position.y + blockSize / 2; // Prevent falling through blocks
-        }
-      });
-
-      camera.position.x += moveDirection.x * 0.1;
-      camera.position.z += moveDirection.z * 0.1;
-      camera.position.y += velocity.y;
-
-      // Ensure player doesn't fall below ground level
-      if (camera.position.y < groundLevel) {
-        camera.position.y = groundLevel;
-        velocity.y = 0;
-      }
-    }
+    // Handle touch end event
+    renderer.domElement.addEventListener('touchend', () => {
+      isDragging = false;
+    });
 
     // Block Placement
     function placeBlock() {
       const blockColor = selectedBlockType.color;
-      const block = createBlock(Math.floor(camera.position.x), Math.floor(camera.position.y), Math.floor(camera.position.z) - 2, blockColor, false);
-      block.name = 'placed'; // Differentiate placed blocks
+      const block = createBlock(0, 0, 0, blockColor, false);
+      block.position.set(camera.position.x, camera.position.y - 1, camera.position.z - 2);
     }
 
-    document.addEventListener('click', placeBlock);
-
-    // Render Loop
+    // Update loop
     function animate() {
       requestAnimationFrame(animate);
-      updateMovement();
+
+      // Camera movement (joystick)
+      camera.position.x += moveDirection.x * 0.1;
+      camera.position.z += moveDirection.z * 0.1;
+
+      // Render scene
       renderer.render(scene, camera);
     }
-
     animate();
   </script>
 </body>
