--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a href="builder.html">3D builder</a></li>
       <li><a href="builder2.html">Minecraft-like builder</a></li>
       <li><a href="cad.html">CAD software</a></li>
+      <li><a href="puzzle.html">puzzle</a></li>
     </ul>
 
   </body>
