--- a/flappy_bird.html
+++ b/flappy_bird.html
@@ -46,7 +46,7 @@
 
     // Bird image
     const birdImage = new Image();
-    birdImage.src = 'https://www.iconsdb.com/icons/preview/white/bird-xxl.png';
+    birdImage.src = 'https://upload.wikimedia.org/wikipedia/commons/e/e5/Flappy_Bird_icon.png';
 
     function startGame() {
       pipes = [];
