--- a/flappy_bird.html
+++ b/flappy_bird.html
@@ -44,7 +44,7 @@
 
     // Game settings
     const gravity = 0.25;
-    const blockSize = 34;
+    const blockSize = 20; // Reduced block size
     let blockY = 150;
     let blockVelocity = 0;
     const blockX = 50;
