--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li><a href="builder2.html">Minecraft-like builder</a></li>
       <li><a href="cad.html">CAD software</a></li>
       <li><a href="puzzle.html">puzzle</a></li>
+      <li><a href="flappy_bird.html">flappy bird</a></li>
       <li><a href="url-taker-to.html">url taker to</a></li>
     </ul>
 
