--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <li><a href="clicker.html">clicker</a></li>
       <li><a href="builder.html">3D builder</a></li>
       <li><a href="builder2.html">Minecraft-like builder</a></li>
-      <li><a href="dodge_the_spike_v.1">Spike game</a></li>
+      <li><a href="dodge_the_spike_v.1.html">Spike game</a></li>
       <li><a href="cad.html">CAD software</a></li>
       <li><a href="puzzle.html">puzzle</a></li>
       <li><a href="flappy_bird.html">flappy bird</a></li>
