--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li><a href="jackinthebox.html">jackinthebox</a></li>
       <li><a href="clicker.html">clicker</a></li>
       <li><a href="builder.html">3D builder</a></li>
-      <li><a href="builder2.html">Minecraft-like builder</a></li>
+      <li><a href="builder2.html">Minecraft-like game</a></li>
       <li><a href="dodge_the_spike-v.1.html">Spike game</a></li>
       <li><a href="cad.html">CAD software</a></li>
       <li><a href="puzzle.html">puzzle</a></li>
