--- a/t-rex.html
+++ b/t-rex.html
@@ -4,3 +4,7 @@
 ‹audio controls src="/media/cc0-audio/t-rex-roar-mp3"></audio>
 ‹a href="/media/cc0-audio/t-rex-roar-mp3"> Download audio </a>
 </figure>
+figure {
+  margin: 0;
+}
+
